Add (automatic) code formatting.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ jupyterlab-darkside-ui==0.2.0
 jupyterlab-git==0.34.2
 plotly==5.5.0
 polars==0.12.22
+jupyterlab-code-formatter==1.4.10
+black[jupyter]==22.1.0
+isort==5.10.1
