--- a/datascience-ultimate-server/Dockerfile
+++ b/datascience-ultimate-server/Dockerfile
@@ -4,12 +4,22 @@ LABEL org.opencontainers.image.authors="franz@diebold.io"
 
 ENV DOCKER_STACKS_JUPYTER_CMD=server
 
-RUN mamba install --quiet --yes \
-    'plotly=5.8.0' \
-    'python-graphviz=0.20' && \
+USER root
+
+# Graphviz
+RUN apt-get update --yes && \
+    apt-get install --yes --no-install-recommends graphviz && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
+USER ${NB_UID}
+
+# GCC (needed for XGBoost)
+RUN mamba install --quiet --yes gcc && \
     mamba clean --all -f -y && \
     fix-permissions "${CONDA_DIR}" && \
     fix-permissions "/home/${NB_USER}"
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY --chown=${NB_UID}:${NB_GID} requirements.txt /tmp/
+RUN pip install --quiet --no-cache-dir --requirement /tmp/requirements.txt && \
+    fix-permissions "${CONDA_DIR}" && \
+    fix-permissions "/home/${NB_USER}"
