--- a/datascience-ultimate-server/requirements.txt
+++ b/datascience-ultimate-server/requirements.txt
@@ -1,7 +1,7 @@
 # Packages
-polars==0.13.51
+polars==0.13.53
 xgboost==1.6.1
 plotly==5.9.0
 graphviz==0.20
 s3fs==2022.5.0
-awsume==4.5.3
+jawsume==0.1.0
