--- a/datascience-ultimate/Dockerfile
+++ b/datascience-ultimate/Dockerfile
@@ -9,4 +9,5 @@ RUN pip install --quiet --no-cache-dir --requirement /tmp/requirements.txt && \
     fix-permissions "${CONDA_DIR}" && \
     fix-permissions "/home/${NB_USER}"
 
-COPY --chown=${NB_UID}:${NB_GID} overrides.json /opt/conda/share/jupyter/lab/settings/overrides.json
+COPY --chown=${NB_UID}:${NB_GID} settings/overrides.json /opt/conda/share/jupyter/lab/settings/overrides.json
+COPY --chown=${NB_UID}:${NB_GID} user-settings/@jupyterlab/apputils-extension/ /home/jovyan/.jupyter/lab/user-settings/@jupyterlab/apputils-extension/
