--- a/datascience-ultimate/Dockerfile
+++ b/datascience-ultimate/Dockerfile
@@ -10,4 +10,4 @@ RUN pip install --quiet --no-cache-dir --requirement /tmp/requirements.txt && \
     fix-permissions "/home/${NB_USER}"
 
 COPY --chown=${NB_UID}:${NB_GID} settings/overrides.json /opt/conda/share/jupyter/lab/settings/overrides.json
-COPY --chown=${NB_UID}:${NB_GID} user-settings/@jupyterlab/apputils-extension/ /home/jovyan/.jupyter/lab/user-settings/@jupyterlab/apputils-extension/
+COPY --chown=${NB_UID}:${NB_GID} user-settings/@jupyterlab/apputils-extension/ "/home/${NB_USER}/.jupyter/lab/user-settings/@jupyterlab/apputils-extension/"
