--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,5 @@ Temporary Items
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,macos,visualstudiocode,jupyternotebooks
+
+.virtual_documents/
